test/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: test 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    external-dns.alpha.kubernetes.io/hostname: workshop-cert.light-eg.xyz
spec:
  ingressClassName: nginx
  rules:
  - host: workshop-cert.light-eg.xyz 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-podinfo 
            port:
              number: 9898
  tls:
    - hosts:
      - workshop-cert.light-eg.xyz
      secretName: workshop-cert-tls
